; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libbluetooth/extr_bluetooth.c_bt_endhostent.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libbluetooth/extr_bluetooth.c_bt_endhostent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hostf = common dso_local global i32* null, align 8
@host_stayopen = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bt_endhostent() #0 {
  %1 = load i32*, i32** @hostf, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = load i64, i64* @host_stayopen, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %3
  %7 = load i32*, i32** @hostf, align 8
  %8 = call i32 @fclose(i32* %7)
  store i32* null, i32** @hostf, align 8
  br label %9

9:                                                ; preds = %6, %3, %0
  ret void
}

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
